Support owners: * Collect owners from metrics.performance.json * provide endpoint to get all projects by owner * provide endpoint to get owner by project * show owner in toolbar
